add a space so that the command and the description don't run together, update man input file accordingly

--- a/docs/spatch.1.in
+++ b/docs/spatch.1.in
@@ -250,8 +250,8 @@ short option of \fB\-\-iso\-file\fR
 .HP
 \fB\-\-no\-show\-diff\fR
 .TP
-\fB\-\-force\-diffshow\fR
-diff even if only spacing changes
+\fB\-\-force\-diff\fR
+show diff even if only spacing changes
 .HP
 \fB\-\-show\-flow\fR
 .HP
