Add missing stdcompat__native.mli

--- a/.gitignore
+++ b/.gitignore
@@ -59,11 +59,20 @@ aclocal.m4
 description-pak
 *.current
 /bundles/pyml/pyml-current/pyml_arch.ml
+/bundles/stdcompat/config.h
+/bundles/stdcompat/stdcompat.h
 /bundles/stdcompat/*.ml
 /bundles/stdcompat/*.mli
 /bundles/stdcompat/stdcompat-*/META
 /bundles/stdcompat/stdcompat-*/Makefile
 /bundles/stdcompat/stdcompat-*/*.ml
 /bundles/stdcompat/stdcompat-*/*.mli
+/bundles/stdcompat/stdcompat-*/config.h
+/bundles/stdcompat/stdcompat-*/stamp-h1
+/bundles/stdcompat/stdcompat-*/stdcompat.h
+/bundles/stdcompat/stdcompat-*/stdcompat__stubs.c
+/bundles/stdcompat/stdcompat-*/stdcompat__native.ml_byte
+/bundles/stdcompat/stdcompat-*/stdcompat__native.ml_native
+!/bundles/stdcompat/stdcompat-*/stdcompat__native.mli
 /bundles/stdcompat/doc/
 /bundles/menhirLib/menhir-20171013/
