--- a/bundles/stdcompat/stdcompat-current/.gitignore
+++ b/bundles/stdcompat/stdcompat-current/.gitignore
@@ -19,6 +19,7 @@ _build/
 /.depend
 /stdcompat_*.ml
 /stdcompat_*.mli
+!/stdcompat__native.mli
 /configure
 /interface_generator/interface_dumper
 /interface_generator/interface_generator
