Compability with OCaml 5.0, bundles update, fix warnings
This commit makes coccinelle compilable with OCaml 5.0.
(Coccinelle should still compile with all previous versions of
OCaml from 3.12.)

This commit updates pyml to the last released version (2022-09-06),
for compatiblity with OCaml 5.0, and fixes the other bundles to remove
the warnings.

--- a/bundles/parmap/Makefile
+++ b/bundles/parmap/Makefile
@@ -11,8 +11,13 @@ LIBRARY=parmap
 SRC_DIR=$(PACKAGE_DIR)
 
 OCAMLCCFLAGS+=-ccopt -D_GNU_SOURCE
+OCAMLFLAGS+=-I $(STDCOMPATDIR)
 
 include ../Makefile.bundles
+
+ifneq ($(OCAMLATLEAST50),no)
+OCAMLFLAGS += -I +unix
+endif
 
 parmap/bytearray.cmo : parmap/bytearray.cmi
 
