--- a/bundles/parmap/parmap/bytearray.ml.in
+++ b/bundles/parmap/parmap/bytearray.ml.in
@@ -36,7 +36,14 @@ let unsafe_blit_to_string a i s j l =
 *)
 
 external unsafe_blit_from_string : string -> int -> t -> int -> int -> unit
-  = "ml_blit_string_to_bigarray" "noalloc"
+  = "ml_blit_string_to_bigarray"
+  @BEGIN_FROM_4_02_0@
+    [@@noalloc]
+  @END_FROM_4_02_0@
+  @BEGIN_BEFORE_4_02_0@
+    "noalloc"
+  @END_BEFORE_4_02_0@
+
 (*
 external unsafe_blit_to_bytes : t -> int -> bytes -> int -> int -> unit
   = "ml_blit_bigarray_to_string" "noalloc"
@@ -114,10 +121,22 @@ external unmarshal : t -> int -> 'a
   = "ml_unmarshal_from_bigarray"
 
 external unsafe_blit_from_floatarray : float array -> int -> tf -> int -> int -> unit
-  = "ml_blit_floatarray_to_bigarray" "noalloc"
+  = "ml_blit_floatarray_to_bigarray"
+  @BEGIN_FROM_4_02_0@
+    [@@noalloc]
+  @END_FROM_4_02_0@
+  @BEGIN_BEFORE_4_02_0@
+    "noalloc"
+  @END_BEFORE_4_02_0@
 
 external unsafe_blit_to_floatarray : tf -> int -> float array -> int -> int -> unit
-  = "ml_blit_bigarray_to_floatarray" "noalloc"
+  = "ml_blit_bigarray_to_floatarray"
+  @BEGIN_FROM_4_02_0@
+    [@@noalloc]
+  @END_FROM_4_02_0@
+  @BEGIN_BEFORE_4_02_0@
+    "noalloc"
+  @END_BEFORE_4_02_0@
 
 let to_floatarray a l =
   let fa = Obj.obj (Obj.new_block Obj.double_array_tag l) in
