--- a/bundles/pyml/pyml-current/.gitignore
+++ b/bundles/pyml/pyml-current/.gitignore
@@ -1,3 +1,4 @@
+_opam
 _build
 .merlin
 .depend
@@ -21,3 +22,6 @@ _build
 /numpy_tests.bytecode
 /pyml_tests.native
 /numpy_tests.native
+/pyops.ml
+/pyops.mli
+/pyml_arch_generate.exe
