--- a/Makefile.config.in
+++ b/Makefile.config.in
@@ -127,3 +127,5 @@ OCAMLCOCCI_FILE=@OCAMLCOCCI_FILE@
 REGEXP_FILE=@REGEXP_FILE@
 
 MENHIR_FLAGS=@DEFAULT_MENHIR_FLAGS@
+
+OCAMLATLEAST50=@OCAMLATLEAST50@
