--- a/bundles/parmap/parmap/config.h.in
+++ b/bundles/parmap/parmap/config.h.in
@@ -1,9 +1,5 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
-/* Define to 1 if you have the declaration of `sched_setaffinity', and to 0 if
-   you don't. */
-#undef HAVE_DECL_SCHED_SETAFFINITY
-
 /* Define to 1 if you have the declaration of `thread_policy_set', and to 0 if
    you don't. */
 #undef HAVE_DECL_THREAD_POLICY_SET
@@ -14,14 +10,11 @@
 /* Define to 1 if you have the <mach/thread_policy.h> header file. */
 #undef HAVE_MACH_THREAD_POLICY_H
 
-/* Define to 1 if you have the <memory.h> header file. */
-#undef HAVE_MEMORY_H
-
-/* Define to 1 if you have the <sched.h> header file. */
-#undef HAVE_SCHED_H
-
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
+
+/* Define to 1 if you have the <stdio.h> header file. */
+#undef HAVE_STDIO_H
 
 /* Define to 1 if you have the <stdlib.h> header file. */
 #undef HAVE_STDLIB_H
@@ -59,5 +52,7 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
-/* Define to 1 if you have the ANSI C header files. */
+/* Define to 1 if all of the C90 standard headers exist (not just the ones
+   required in a freestanding environment). This macro is provided for
+   backward compatibility; new code need not use it. */
 #undef STDC_HEADERS
