--- a/configure.ac
+++ b/configure.ac
@@ -308,6 +308,8 @@ AS_IF([test -n "$with_python" -a "$with_python" != "yes"],
 AS_IF([test "x$enable_python" != xno],
 [dnl
   dnl AC_CHECK_COCCI_EXTPKG([pyml])  dnl  will set $enable_pyml to 'yes', 'no', or 'local'
+  AC_SUBST([enable_pyml],[local])
+  AC_SUBST([MODULES_pyml],[$COCCI_SRCDIR/bundles/pyml/pyml.cma])
   AC_SUBST([MAKE_pyml],[$COCCI_SRCDIR/bundles/pyml])
   AC_SUBST([PATH_pyml],[$COCCI_SRCDIR/bundles/pyml])
 ])
