Remove auto-generated files pcre.ml and stdcompat/config.h.in
The two following files are autogenerated:
- bundles/pcre/pcre-ocaml/src/pcre.ml
- bundles/stdcompat/stdcompat-current/config.h.in

pcre.ml was tracked again by commit 1d0733a2 and
config.h.in was tracked again by commit af99159b.
Both files should be untracked and have been added to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,7 @@ description-pak
 /bundles/stdcompat/stdcompat-*/*.ml
 /bundles/stdcompat/stdcompat-*/*.mli
 /bundles/stdcompat/stdcompat-*/config.h
+/bundles/stdcompat/stdcompat-*/config.h.in
 /bundles/stdcompat/stdcompat-*/stamp-h1
 /bundles/stdcompat/stdcompat-*/stdcompat.h
 /bundles/stdcompat/stdcompat-*/stdcompat__stubs.c
