--- a/configure.ac
+++ b/configure.ac
@@ -154,10 +154,18 @@ AC_REQ_COCCI_STDPKG([str])
 dnl  required modules (Some are available locally too)
 AC_REQ_COCCI_EXTPKG([dynlink])
 AC_REQ_COCCI_EXTPKG([parmap])
-dnl AC_REQ_COCCI_EXTPKG([stdcompat])
+AC_REQ_COCCI_EXTPKG([stdcompat])
 
-AC_SUBST([MAKE_stdcompat],[$COCCI_SRCDIR/bundles/stdcompat])
-AC_SUBST([PATH_stdcompat],[$COCCI_SRCDIR/bundles/stdcompat])
+AS_IF([test "x$enable_stdcompat" = "xyes"],
+  [AC_MSG_CHECKING([if installed stdcompat provides In_channel])
+   echo "Stdcompat.In_channel.stdin" > configure_test.ml
+   AS_IF([$OCAMLFIND c -package stdcompat -c configure_test.ml >/dev/null 2>/dev/null],
+     [AC_MSG_RESULT([yes])],
+     [AC_MSG_RESULT([no])
+      AC_SUBST([enable_stdcompat], [local])
+      AC_SUBST([MAKE_stdcompat],[$COCCI_SRCDIR/bundles/stdcompat])
+      AC_SUBST([PATH_stdcompat],[$COCCI_SRCDIR/bundles/stdcompat])])
+   rm -f configure_test.ml configure_test.cmo configure_test.cmi configure_test.cmt])
 
 dnl  AC_CACHE_SAVE
 
@@ -188,7 +196,6 @@ AC_COCCI_TOOL([MENHIR],[menhir],[$PATH_menhir_bundle])
 
 AS_IF([test "x$SUBSTITUTED_MENHIR" != xyes],
 [dnl
-  AC_MSG_NOTICE([system menhir will be used])
   AC_SUBST([MAKE_menhirLib],[])
   AS_IF([$MENHIR --help | grep suggest-menhirLib >/dev/null],
     [dnl
@@ -307,12 +314,20 @@ AS_IF([test -n "$with_python" -a "$with_python" != "yes"],
 
 AS_IF([test "x$enable_python" != xno],
 [dnl
-  dnl AC_CHECK_COCCI_EXTPKG([pyml])  dnl  will set $enable_pyml to 'yes', 'no', or 'local'
-  AC_SUBST([enable_pyml],[local])
-  AC_SUBST([MODULES_pyml],[$COCCI_SRCDIR/bundles/pyml/pyml.cma])
-  AC_SUBST([MAKE_pyml],[$COCCI_SRCDIR/bundles/pyml])
-  AC_SUBST([PATH_pyml],[$COCCI_SRCDIR/bundles/pyml])
-])
+  AC_CHECK_COCCI_EXTPKG([pyml])  dnl  will set $enable_pyml to 'yes', 'no', or 'local'
+
+  AS_IF([test "x$enable_pyml" = "xyes"],
+    [AC_MSG_CHECKING([if installed pyml provides Class.init with list of parent classes])
+     echo "Py.Class.init ~parents:[[]]" > configure_test.ml
+     AS_IF([$OCAMLFIND c -package pyml -c configure_test.ml > /dev/null 2>/dev/null],
+       [AC_MSG_RESULT([yes])],
+       [AC_MSG_RESULT([no])
+        AC_SUBST([enable_pyml],[local])
+        AC_SUBST([MODULES_pyml],[$COCCI_SRCDIR/bundles/pyml/pyml.cma])
+        AC_SUBST([MAKE_pyml],[$COCCI_SRCDIR/bundles/pyml])
+        AC_SUBST([PATH_pyml],[$COCCI_SRCDIR/bundles/pyml])])
+     rm -f configure_test.ml configure_test.cmo configure_test.cmi configure_test.cmt
+  ])])
 
 AS_IF([test -z "$enable_python"],
 [dnl
