Fix coccinelle as library
Add `coccinelle.ml` to the `ml_files` variable in `Makefile` and add
test for target `coccinelle.cmxa` in CI.

--- a/ci/Dockerfile.build
+++ b/ci/Dockerfile.build
@@ -3,3 +3,4 @@ FROM $from
 COPY --chown=ci:users . /home/ci/coccinelle/
 ARG configure_options
 RUN cd /home/ci/coccinelle && ./autogen && ./configure $configure_options && make
+RUN cd /home/ci/coccinelle && make coccinelle.cmxa
